--- a/media-queries.css
+++ b/media-queries.css
@@ -1,26 +1,49 @@
 * {
+    font-family: monospace;
     box-sizing: border-box;
 }
-
-body {
-
+.alert-info {
+    display: none;
 }
-
-h1 {
-    display: inline-grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(6, 100px);
-
-}
-
 ul {
     list-style: none;
+    margin: auto;
+    display: flex;
 }
-
+li {
+    position: relative;
+    bottom: 50px;
+    margin: 1em;
+}
 nav {
-    display: inline-grid;
-    grid-template-rows: repeat(1, 1fr);
-    grid-template-columns: repeat(6, 100px);
-
+    float: right;
+    display: flex;
+    margin: auto;
+    justify-content: space-evenly;
+}
+.header-img {
+    display: flex;
+    position: relative;
+    right: -200px;
+}
+.main {
+    display:flex;
+    flex-direction: column;
+    width: 800px;
+    height: 400px;
+}
+.sub-section {
+    padding-left: 50px;
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    height: 400px;
+    float:right;
+    position: relative;
+    bottom: 400px;
+}
+footer {
+    position: relative;
+    top: 350px;
 }
 
